--- a/css/style.css
+++ b/css/style.css
@@ -455,7 +455,7 @@ body {
 /* faq end */
 
 /* ------------------------------------------- */
-/* services start */
+/*4  services  start */
 .h3-s{
     text-align: center;
     font-size: 20px;
@@ -474,14 +474,15 @@ body {
     margin: 50px 0;
     }
     .content-s{
-    width: 21%;
-    margin: 9px;
+    width: 40%;
+    height: 40%;
+    margin: 12px;
     box-sizing: border-box;
     float: left;
     text-align: center;
     border-radius:1px;
     padding-top: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 18px rgba(0, 0, 0, 0.1);
     transition: .4s;
     }
     .content-s:hover{
@@ -512,7 +513,7 @@ body {
     width: 60%;
     }
     }
-/* services end */
+/*4 services end */
 
 /* --------------------------------------------------- */
 /* service station start */
@@ -1192,3 +1193,110 @@ body {
     }
 
     /* insurance form ends  */
+
+    /* car rental popup start */
+    .popup-link-m{
+        display:flex;
+        flex-wrap:wrap;
+      }
+      .popup-container-m {
+          visibility: hidden;
+          opacity: 0;
+          transition: all 0.3s ease-in-out;
+          transform: scale(1.3);
+          position: fixed;
+          z-index: 1;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(21, 17, 17, 0.61);
+          display: flex;
+          align-items: center;
+      }
+      .popup-content-m {
+          background-color: #fefefe;
+          margin: auto;
+          padding: 20px;
+          border: 1px solid #888;
+          width: 50%;
+      }
+      .popup-content-m p{
+          font-size: 17px;
+          padding: 10px;
+          line-height: 20px;
+      }
+      .popup-content-m a.close-m{
+          color: #aaaaaa;
+          float: right;
+          font-size: 28px;
+          font-weight: bold;
+          background: none;
+          padding: 0;
+          margin: 0;
+          text-decoration:none;
+      }
+      
+      .popup-content-m a.close-m:hover{
+        color:#333;
+      }
+      
+      .popup-content-m span:hover,
+      .popup-content-m span:focus {
+          color: #000;
+          text-decoration: none;
+          cursor: pointer;
+      }
+      
+      .popup-container-m:target{
+        visibility: visible;
+        opacity: 1;
+        transform: scale(1);
+      }
+      
+      .popup-container-m h3{
+        margin:10px;
+      }
+      
+    /* car rental popup ends */
+
+/* services listing page start  */
+
+.ratings i {
+    font-size: 16px;
+    color: red
+}
+
+.strike-text {
+    color: red;
+    text-decoration: line-through
+}
+
+.product-image {
+    width: 100%
+}
+
+.dot {
+    height: 7px;
+    width: 7px;
+    margin-left: 6px;
+    margin-right: 6px;
+    margin-top: 3px;
+    background-color: blue;
+    border-radius: 50%;
+    display: inline-block
+}
+
+.spec-1 {
+    color: #938787;
+    font-size: 15px
+}
+
+h5 {
+    font-weight: 400
+}
+
+.para {
+    font-size: 16px
+}
+/* services listing page ends  */
